--- a/Embendding_images_and_video/index.html
+++ b/Embendding_images_and_video/index.html
@@ -16,7 +16,7 @@
                 <!--Il se compose d'une 1ère partie contenant : -->
                 <div class="uBox-flex fullCentered navContainer-item">
                     <!--Un bouton.-->
-                    <div class="navItem">
+                    <div class="navItem uBox-flex">
                         <button class="cBtn">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-menu-burger.png" alt="">
@@ -35,9 +35,9 @@
                 <!--D'une 2ème partie contenant : -->
                 <div class="uBox-flex fullCentered navContainer-item">
                     <!--Un formulaire de recherche.-->
-                    <form action="" class="navItem">
+                    <form action="" class="navItem uBox-flex">
                         <input class="navItem-searchInput" type="search" id="search" name="r" aria-label="Rechercher sur le site" placeholder="Rechercher">
-                        <button class="cBtn">
+                        <button class="cBtn navItem-btn">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-rechercher.png" alt="">
                             </div>
@@ -48,27 +48,27 @@
                 <div class="uBox-flex fullCentered navContainer-item">
                     <!--Une liste de 5 liens contenant des images.-->
                     <ul class="uBox-flex">
-                        <a href="#" class="navItem">
+                        <a href="#" class="navItem uBox-flex fullCentered">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-ajout-video.png" alt="">
                             </div>
                         </a>
-                        <a href="#" class="navItem">
+                        <a href="#" class="navItem uBox-flex fullCentered">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-menu-carre.png" alt="">
                             </div>
                         </a>
-                        <a href="#" class="navItem">
+                        <a href="#" class="navItem uBox-flex fullCentered">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-message.png" alt="">
                             </div>
                         </a>
-                        <a href="#" class="navItem">
+                        <a href="#" class="navItem uBox-flex fullCentered">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-notification.png" alt="">
                             </div>
                         </a>
-                        <a href="#" class="navItem">
+                        <a href="#" class="navItem  uBox-flex fullCentered">
                             <div class="navItem-icon navItem-profil">
                                 <img class="imgResponsive" src="img/nav-profil.png" alt="">
                             </div>
@@ -271,6 +271,33 @@
                     </div>
                 </div>
                 <div class="mainContainer-videoChoice">
+                    <div>
+                        <div>
+                            <a href="">
+
+                            </a>
+                        </div>
+                        <div>
+                            <div>
+                                <h3>
+
+                                </h3>
+                            </div>
+                            <div>
+                                <p>
+
+                                </p>
+                                <p>
+
+                                </p>
+                            </div>
+                        </div>
+                        <div>
+                            <a href="">
+
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
