add img + contenu mainContainer

--- a/Embendding_images_and_video/index.html
+++ b/Embendding_images_and_video/index.html
@@ -80,7 +80,7 @@
         <main>
             <section class="videoContainer">
                 <div class='embed-container'>
-                    <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    <iframe src="https://www.youtube.com/embed/7TpVD7sZUbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                     </iframe>
                 </div>
             </section>
@@ -88,45 +88,45 @@
                 <div class="mainContainer-commentary">
                     <div class="commentaryMenu">
                         <div class="commentaryMenu-hashtag">
-                            <p><a href=""></a></p>
+                            <p class="paragraph-xs"><a href="">#Heule</a><a href="">#Pipelette</a><a href="">#Tumefatigues</a></p>
                         </div>
                         <div class="commentaryMenu-title">
-                            <h1></h1>
+                            <h1 class="title-lg">La Rue Ketanou - Tu parles trop</h1>
                         </div>
                         <div class="commentaryMenu-info">
                             <div>
                                 <p>
-
+                                    666 666 666 vues
                                 </p>
                             </div>
                             <div>
                                 <div>
                                     <div>
-                                        <img src="" alt="">
+                                        <img src="img/agree.png" alt="">
                                     </div>
-                                    <p></p>
+                                    <p>92000</p>
                                 </div>
                                 <div>
                                     <div>
-                                        <img src="" alt="">
+                                        <img src="img/disagree.png" alt="">
                                     </div>
-                                    <p></p>
+                                    <p>971</p>
                                 </div>
                             </div>
                             <div>
                                 <div>
-                                    <img src="" alt="">
+                                    <img src="img/partager.png" alt="">
                                 </div>
-                                <p></p>
+                                <p>PARTAGER</p>
                             </div>
                             <div>
                                 <div>
-                                    <img src="" alt="">
+                                    <img src="img/enregistrer.png" alt="">
                                 </div>
-                                <p></p>
+                                <p>ENREGISTRER</p>
                             </div>
                             <div>
-                                <img src="" alt="">
+                                <img src="img/more.png" alt="">
                             </div>
                         </div>
                     </div>
