Suite de l'intégration de la partie commentaire

--- a/Embendding_images_and_video/index.html
+++ b/Embendding_images_and_video/index.html
@@ -69,7 +69,7 @@
                             </div>
                         </a>
                         <a href="#" class="navItem  uBox-flex fullCentered">
-                            <div class="navItem-icon navItem-profil">
+                            <div class="imgProfil navItem-profilColor">
                                 <img class="imgResponsive" src="img/nav-profil.png" alt="">
                             </div>
                         </a>
@@ -78,124 +78,133 @@
             </nav>
         </header>
         <main>
-            <section class="videoContainer">
+            <section class="videoContainer mainContainer">
                 <div class='embed-container'>
                     <iframe src="https://www.youtube.com/embed/7TpVD7sZUbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                     </iframe>
                 </div>
             </section>
-            <section class="mainContainer uBox-flex">
-                <div class="mainContainer-commentary">
-                    <div class="commentaryMenu">
-                        <div class="commentaryMenu-hashtag">
-                            <p class="paragraph-xs"><a href="">#Heule</a><a href="">#Pipelette</a><a href="">#Tumefatigues</a></p>
+            <section class="mainContainer contentContainer uBox-flex">
+                <div class="contentContainer-commentary">
+                    <div class="commentaryMenu uSpacing-border">
+                        <div class="commentaryMenu-hashtag uMargin-bottom-sm">
+                            <p class="paragraph-xxs  uBox-flex uMargin-no">
+                                <a class="commentaryMenu-hashtagLink" href="">#Heule</a>
+                                <a class="commentaryMenu-hashtagLink" href="">#Pipelette</a>
+                                <a class="commentaryMenu-hashtagLink" href="">#Tumefatigues</a></p>
                         </div>
-                        <div class="commentaryMenu-title">
-                            <h1 class="title-lg">La Rue Ketanou - Tu parles trop</h1>
+                        <div class="commentaryMenu-title  uMargin-bottom-sm">
+                            <h1 class="title-lg uMargin-no">La Rue Ketanou - Tu parles trop</h1>
                         </div>
-                        <div class="commentaryMenu-info">
-                            <div>
-                                <p>
+                        <div class="commentaryMenu-info uBox-flex">
+                            <a href="#" class="commentaryMenu-infoItem">
+                                <p class="paragraph-xs uMargin-no">
                                     666 666 666 vues
                                 </p>
-                            </div>
-                            <div>
-                                <div>
-                                    <div>
-                                        <img src="img/agree.png" alt="">
+                            </a>
+                            <div class="uBox-flex commentaryMenu-infoItem">
+                                <a href="#" class="uBox-flex commentaryMenu-infoLike">
+                                    <div class="commentaryMenu-img">
+                                        <img class="imgResponsive" src="img/agree.png" alt="">
                                     </div>
-                                    <p>92000</p>
-                                </div>
-                                <div>
-                                    <div>
-                                        <img src="img/disagree.png" alt="">
+                                    <p class="paragraph-xs uMargin-no">92000</p>
+                                </a>
+                                <a href="#" class="uBox-flex commentaryMenu-infoLike">
+                                    <div class="commentaryMenu-img">
+                                        <img  class="imgResponsive"src="img/disagree.png" alt="">
                                     </div>
-                                    <p>971</p>
+                                    <p class="paragraph-xs uMargin-no">971</p>
+                                </a>
+                            </div>
+                            <a href="#" class="uBox-flex commentaryMenu-infoItem">
+                                <div class="commentaryMenu-img">
+                                    <img class="imgResponsive" src="img/partager.png" alt="">
                                 </div>
-                            </div>
-                            <div>
-                                <div>
-                                    <img src="img/partager.png" alt="">
+                                <p class="paragraph-xs uMargin-no">PARTAGER</p>
+                            </a>
+                            <a href="#" class="uBox-flex commentaryMenu-infoItem">
+                                <div class="commentaryMenu-img">
+                                    <img class="imgResponsive" src="img/enregistrer.png" alt="">
                                 </div>
-                                <p>PARTAGER</p>
-                            </div>
-                            <div>
-                                <div>
-                                    <img src="img/enregistrer.png" alt="">
-                                </div>
-                                <p>ENREGISTRER</p>
-                            </div>
-                            <div>
-                                <img src="img/more.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mainContainer-commentaryInfo">
-                        <div>
-                            <a>
-                                <img src="" alt="">
+                                <p class="paragraph-xs uMargin-no">ENREGISTRER</p>
+                            </a>
+                            <a href="#" class="commentaryMenu-img commentaryMenu-infoItem">
+                                <img class="imgResponsive" src="img/more.png" alt="">
                             </a>
                         </div>
-                        <div>
-                            <div>
-                                <a>
-                                    <h2>
-
-                                    </h2>
-                                </a>
-                                <div>
-                                    <p>
-                                        
-                                    </p>
-                                </div>
-                            </div>
-                            <div>
-                                <p>
-                                    <span><a href=""></a></span>
-                                </p>
-                            </div>
-                            <div>
-                                <a href=""></a>
-                            </div>
-                        </div>
-                        <div>
-                            <button></button>
-                        </div>
                     </div>
-                    <div class="mainContainer-commentaryWrite">
-                        <div>
+                    <div class="commentaryInfo uSpacing-border">
+                        <div class="commentaryInfo-item">
+                            <a class="imgProfil " href="#">
+                                <img class="imgResponsive" src="img/nav-profil.png" alt="">
+                            </a>
+                        </div>
+                        <div class="commentaryInfo-item">
+                            <div class="uBox-flex commentaryInfo-title">
+                                <div class="uMargin-bottom-md">
+                                    <a class="uMargin-bottom-xs commentaryInfo-titleBox" href="#">
+                                        <h2 class="title-xs uMargin-no">
+                                            L'Âne aux nids mousse
+                                        </h2>
+                                    </a>
+                                    <div>
+                                        <p class="paragraph-xxs uMargin-no">
+                                            Ajouté le 1er décembre 1955
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="commentaryInfo-item">
+                                    <button class="cBtn cBtn-abonnement">S'abonner <span>4K</span></button>
+                                </div>
+                            </div>
                             <div>
-                                <p>
-
+                                <p class="paragraph-xs">
+                                    S'il ne fallait écouter que soit, ne lire que ce que l'on écrit, ne vivre que pour ses désirs, il me semble qu'il faudrait commencer par écouter ceci. Ou tout simplement pas.<br/><br/>
+                                    <span>
+                                        <a href="">
+                                            www.surlesroutesduparadigme.fr
+                                        </a>
+                                    </span>
                                 </p>
                             </div>
                             <div>
-                                <div>
-                                    <img src="" alt="">
-                                </div>
-                                <div>
-                                    <p>
-
-                                    </p>
-                                </div>
+                                <a class="paragraph-sm collapseLink" href="">Plus</a>
                             </div>
+                        </div>                        
+                    </div>
+                    <div class="commentaryView uBox-flex">
+                        <div class="commentaryView-item">
+                            <p class="paragraph-sm uMargin-no">
+                                <span>69</span>
+                                Commentaires
+                            </p>
                         </div>
-                        <div>
+                        <a class="commentaryView-item uBox-flex popoverLink" href="#">
+                            <div class="commentaryView-img">
+                                <img class="imgResponsive" src="img/trier.png" alt="">
+                            </div>
                             <div>
-                                <img src="" alt="">
+                                <p class="paragraph-sm uMargin-no">
+                                    Trier par
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="commentaryRead">
+                        <div class="uBox-flex">
+                            <div class="imgRounded imgProfil">
+                                <img class="imgResponsive" src="img/nav-profil.png" alt="">
                             </div>
                             <form action="">
                                 <div>
-                                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                                    <textarea name="newCommentary" id="#newCommentary" rows="1" placeholder="Ajouter un commentaire"></textarea>
                                 </div>
                                 <div>
-                                    <button></button>
-                                    <button></button>
+                                    <button class="cBtn newCommentary-btn">Annuler</button>
+                                    <button class="cBtn newCommentary-btn">Ajouter un commentaire</button>
                                 </div>
                             </form>
                         </div>
-                    </div>
-                    <div class="mainContainer-commentaryRead">
                         <div>
                             <div>
                                 <img src="" alt="">
@@ -270,7 +279,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="mainContainer-videoChoice">
+                <div class="contentContainer-videoChoice">
                     <div>
                         <div>
                             <a href="">
