Intégration commentaires vidéo

--- a/Embendding_images_and_video/index.html
+++ b/Embendding_images_and_video/index.html
@@ -87,13 +87,13 @@
             <section class="mainContainer contentContainer uBox-flex">
                 <div class="contentContainer-commentary">
                     <div class="commentaryMenu uSpacing-border">
-                        <div class="commentaryMenu-hashtag uMargin-bottom-sm">
+                        <div class="commentaryMenu-hashtag uMargin-bottom-xs">
                             <p class="paragraph-xxs  uBox-flex uMargin-no">
                                 <a class="commentaryMenu-hashtagLink" href="">#Heule</a>
                                 <a class="commentaryMenu-hashtagLink" href="">#Pipelette</a>
                                 <a class="commentaryMenu-hashtagLink" href="">#Tumefatigues</a></p>
                         </div>
-                        <div class="commentaryMenu-title  uMargin-bottom-sm">
+                        <div class="commentaryMenu-title  uMargin-bottom-xs">
                             <h1 class="title-lg uMargin-no">La Rue Ketanou - Tu parles trop</h1>
                         </div>
                         <div class="commentaryMenu-info uBox-flex">
@@ -172,11 +172,11 @@
                             </div>
                         </div>                        
                     </div>
-                    <div class="commentaryView uBox-flex">
+                    <div class="commentaryView uBox-flex uMargin-bottom-md">
                         <div class="commentaryView-item">
                             <p class="paragraph-sm uMargin-no">
                                 <span>69</span>
-                                Commentaires
+                                commentaires
                             </p>
                         </div>
                         <a class="commentaryView-item uBox-flex popoverLink" href="#">
@@ -191,13 +191,13 @@
                         </a>
                     </div>
                     <div class="commentaryRead">
-                        <div class="uBox-flex">
+                        <div class="uBox-flex fullCentered uWidth-100 uMargin-bottom-md">
                             <div class="imgRounded imgProfil">
                                 <img class="imgResponsive" src="img/nav-profil.png" alt="">
                             </div>
-                            <form action="">
+                            <form class="commentaryRead-form"action="">
                                 <div>
-                                    <textarea name="newCommentary" id="#newCommentary" rows="1" placeholder="Ajouter un commentaire"></textarea>
+                                    <textarea class="paragraph-md uWidth-100 cForm-addComment" name="newCommentary" id="#newCommentary" rows="1" placeholder="Ajouter un commentaire"></textarea>
                                 </div>
                                 <div>
                                     <button class="cBtn newCommentary-btn">Annuler</button>
@@ -205,77 +205,69 @@
                                 </div>
                             </form>
                         </div>
-                        <div>
+                        <div  class="commentaryRead-item uWidth-100">
                             <div>
-                                <img src="" alt="">
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <div>
-                                    <a href="">
-                                        <p>
-
-                                        </p>
-                                    </a>
-                                </div>
-                                <div>
-                                     <a href="">
-                                        <p>
-                                            
-                                        </p>
-                                    </a>
+                                <div class="imgRounded imgProfil">
+                                    <img class="imgResponsive" src="img/nav-profil.png" alt="">
                                 </div>
                             </div>
                             <div>
-                                <div>
-                                    <p></p>
-                                </div>
-                                <div>
-                                    <a href="">
-                                        <p>
-
-                                        </p>
-                                    </a>
-                                </div>
-                            </div>
-                            <div>
-                                <div>
+                                <div class="uBox-flex">
                                     <div>
-                                        <div>
-                                            <img src="" alt="">
-                                        </div>
-                                        <div>
-                                            <p></p>
-                                        </div>    
-                                    </div>
+                                        <a href="#">
+                                            <p class="paragraph-xs">
+                                                Igor Aiduppindure
+                                            </p>
+                                        </a>
                                     <div>
-                                        <div>
-                                            <img src="" alt="">
-                                        </div>
-                                        <div>
-                                            <p></p>
-                                        </div>  
+                                        <a href="#">
+                                            <p class="paragraph-xs">
+                                                il y a 6 heures
+                                            </p>
+                                        </a>
                                     </div>
                                 </div>
                                 <div>
-                                    <a href="">
-                                        <p>
-
-                                        </p>
-                                    </a>
+                                    <div>
+                                        <p class="paragraph-sm">Vraiment des fois, tu parles trop. Mais bon je ne peux te baillonner. Alors en toute discrétion, une fois couché, j'écoute cette musique !</p>
+                                    </div>
+                                    <div>
+                                        <a class="paragraph-sm collapseLink noMoreComment" href="">Plus</a>
+                                    </div>
                                 </div>
-                            </div>
-                            <div>
                                 <div>
-                                    <a href="">
-                                        <img src="" alt="">
-                                    </a>
-                                </div>
+                                    <div class="uBox-flex">
+                                        <div class="uBox-flex">
+                                            <div class="commentaryRead-img">
+                                                <img class="imgResponsive" src="img/agree.png" alt="">
+                                            </div>
+                                            <div>
+                                                <p>26</p>
+                                            </div>    
+                                        </div>
+                                        <div class="uBox-flex">
+                                            <div class="commentaryRead-img">
+                                                <img class="imgResponsive" src="img/disagree.png" alt="">
+                                            </div>
+                                            <div>
+                                                <p></p>
+                                            </div>  
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <a class="paragraph-sm popoverLink" href="#">
+                                                Répondre
+                                        </a>
+                                    </div>
+                                </div>  
                             </div>
                         </div>
                         <div>
-                            
+                            <div class="uInvisibility">
+                                <a class="commentaryRead-img" href="#">
+                                    <img src="img/more.png" alt="">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
