--- a/Embendding_images_and_video/index.html
+++ b/Embendding_images_and_video/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Page Title</title>
+        <title>HontanTube</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
         <link href="https://fonts.googleapis.com/css?family=Heebo:300,400,500,700,800" rel="stylesheet">
@@ -77,7 +77,7 @@
                 </div>
             </nav>
         </header>
-        <main class="">
+        <main>
             <section class="videoContainer mainContainer navFixed-marginSibiling">
                 <div class='embed-container'>
                     <iframe src="https://www.youtube.com/embed/7TpVD7sZUbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -886,7 +886,7 @@
                                 </p>
                             </div>
                         </a>
-                        <div class="uInvisibility-item"> 
+                        <div class="uInvisibility-item">
                             <a class="videoChoice-moreBtn" href="#">
                                 <img class="imgResponsive" src="img/more.png" alt="">
                             </a>
