--- a/Embendding_images_and_video/index.html
+++ b/Embendding_images_and_video/index.html
@@ -23,11 +23,11 @@
                             </div>
                         </button>
                     </div>
-                    <a href="#" class="navItem uBox-flex fullCentered">
+                    <a href="#" class="navItem uBox-flex fullCentered responsiveNone-309">
                         <div class="navItem-icon">
                             <img class="imgResponsive" src="img/nav-tv-96.png" alt="">
                         </div>
-                        <p class="navItem-text title-sm">
+                        <p class="navItem-text title-sm responsiveNone-821">
                            HontanTube
                         </p>                     
                     </a>
@@ -36,7 +36,7 @@
                 <div class="uBox-flex fullCentered navContainer-item">
                     <!--Un formulaire de recherche.-->
                     <form action="" class="navItem uBox-flex">
-                        <input class="navItem-searchInput" type="search" id="search" name="r" aria-label="Rechercher sur le site" placeholder="Rechercher">
+                        <input class="navItem-searchInput responsiveNone-663" type="search" id="search" name="r" aria-label="Rechercher sur le site" placeholder="Rechercher">
                         <button class="cBtn navItem-btn">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-rechercher.png" alt="">
@@ -48,22 +48,22 @@
                 <div class="uBox-flex fullCentered navContainer-item">
                     <!--Une liste de 5 liens contenant des images.-->
                     <ul class="uBox-flex">
-                        <a href="#" class="navItem uBox-flex fullCentered">
+                        <a href="#" class="navItem uBox-flex fullCentered responsiveNone-508">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-ajout-video.png" alt="">
                             </div>
                         </a>
-                        <a href="#" class="navItem uBox-flex fullCentered">
+                        <a href="#" class="navItem uBox-flex fullCentered responsiveNone-508">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-menu-carre.png" alt="">
                             </div>
                         </a>
-                        <a href="#" class="navItem uBox-flex fullCentered">
+                        <a href="#" class="navItem uBox-flex fullCentered responsiveNone-508">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-message.png" alt="">
                             </div>
                         </a>
-                        <a href="#" class="navItem uBox-flex fullCentered">
+                        <a href="#" class="navItem uBox-flex fullCentered responsiveNone-508">
                             <div class="navItem-icon">
                                 <img class="imgResponsive" src="img/nav-notification.png" alt="">
                             </div>
@@ -172,7 +172,7 @@
                             </div>
                         </div>                        
                     </div>
-                    <div class="commentaryView uBox-flex uMargin-bottom-md">
+                    <div class="commentaryView uBox-flex uMargin-bottom-md responsiveNone-821">
                         <div class="commentaryView-item">
                             <p class="paragraph-sm uMargin-no">
                                 <span>69</span>
@@ -190,7 +190,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="commentaryRead uMargin-bottom-md">
+                    <div class="commentaryRead uMargin-bottom-md responsiveNone-821">
                         <div class="uBox-flex fullCentered uWidth-100 uMargin-bottom-md">
                             <div class="imgRounded imgProfil">
                                 <img class="imgResponsive" src="img/nav-profil.png" alt="">
@@ -696,7 +696,6 @@
                                     </a>
                                 </div>
                             </div>
-                        </div>
                     </div>
                 </div>
                 <div class="contentContainer-videoChoice">
