Responsive Sublogo Formulaire Input Padding btn account

--- a/HTML_forms/index.html
+++ b/HTML_forms/index.html
@@ -34,7 +34,7 @@
                 <div class="uMargin-bottom-sm">
                     <a class="logoImg" href="#"></a>
                 </div>
-                <div class="uBox-flex">
+                <div class="uBox-flex subLogo-Box">
                     <div class="uBox-flex">
                         <div>
                             <a class="subLogo subLogo-img mint-img" href="#"></a>
