Styles texte footer

--- a/Positioning_and_floating_elements/index.html
+++ b/Positioning_and_floating_elements/index.html
@@ -1294,57 +1294,57 @@
                     <h5>SUBSCRIBE</h5>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <h4 class="suscribeTitle">
                             Home Delivery
-                        </p>
+                        </h4>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <h4 class="suscribeTitle">
                             Digital Subscriptions
-                        </p>
+                        </h4>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <h4 class="suscribeTitle">
                             Crossword
-                        </p>
+                        </h4>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <h4 class="suscribeTitle">
                             Cooking
-                        </p>
+                        </h4>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Email Newsletters
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Corporate Subscriptions
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Education Rate
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Mobile Applications
                         </p>
                     </a>
@@ -1354,78 +1354,78 @@
         <div>
             <ul class="uBox-flex">
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             © 2019 The New York Times Company
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Contact Us
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Work with us
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Advertise
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Your Ad Choices
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Privacy
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Terms of Service
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Terms of Sale
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Site Map
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Help
                         </p>
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
-                        <p>
+                    <a href="#" class="cLink-underline">
+                        <p class="paragraph-xxxs text-gray">
                             Subscriptions
                         </p>
                     </a>
